--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="profile-image">
-                        <img src="assets/Foto.JPG" alt="Anjasyah Ega Ramadhan">
+                        <img src="assets/Foto2.png" alt="Anjasyah Ega Ramadhan">
                     </div>
                 </div>
             </div>
