--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="text" id="password" name="password" required>
+                    <input type="password" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
